fix: vertically align start button (#594)
* fix: vertically align start button

* chore: version bump

--- a/src/assets/styles/player.scss
+++ b/src/assets/styles/player.scss
@@ -854,8 +854,10 @@ $start-button-size: 15vw;
       border: 1px solid $white;
       border-radius: 50%;
       height: 0.75 * $start-button-size;
+      margin-bottom: auto;
       margin-left: auto;
       margin-right: auto;
+      margin-top: auto;
       max-height: 170px;
       max-width: 170px;
       width: 0.75 * $start-button-size;
